# Ally

./: CMakeLists.txt  README.md  main.cpp
include/: html.h
source/: README.md  main.cpp
source/source/: main.cpp
templates/: index.html
